Fixed horizontal scrolling & footer for smartphone resolution

--- a/css/style.css
+++ b/css/style.css
@@ -908,4 +908,25 @@ footer {
     grid-gap: 24px 0;
     margin: 0 0 56px;
   }
+
+  .top-footer {
+    height: 207px;
+  }
+
+  .top-footer div {
+    padding-left: 10px;
+  }
+
+  .top-footer > div:nth-child(1) {
+    flex-wrap: wrap;
+  }
+
+  .top-footer ul {
+    flex-wrap: wrap;
+    padding-top: 20px;
+  }
+
+  .top-footer li {
+    padding-top: 10px;
+  }
 }
